--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,47 @@
-# Google OAuth client credentials
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
+###############################################
+# YT Playlist Manager - Environment Variables #
+###############################################
 
-# Session signing secret (use a long random string in production)
-SESSION_SECRET=dev-only-secret
+#===============================================================================
+# App Environment
+#===============================================================================
 
-# App base URL (used for redirects and links)
+# Node environment: development | production
+NODE_ENV=development
+
+# Your public-facing base URL (used for OAuth redirect, emails, links, etc.)
+# ⚠ In production, replace with real domain, e.g. https://yourapp.com
 APP_BASE_URL=http://localhost:3000
 
+# Next.js public base URL (exposed to browser)
+# ⚠ Should match the domain used for frontend requests
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Optional: adjust logging verbosity (debug, info, warn, error)
-# LOG_LEVEL=info
+# Session signing key for auth state / cookies
+# ⚠ MUST be replaced with a long random string in production
+SESSION_SECRET=dev-super-secret-change-me
+
+
+# Database Configuration
+# Example (PostgreSQL (Docker) / Neon):
+# postgres://postgres:postgres@localhost:5432/ytpm  
+# DATABASE_URL=postgresql://neondb____
+DATABASE_URL=
+
+
+# Google OAuth Credentials
+# OAuth Client ID / Secret from Google Cloud Console
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Redirect URI must match Google OAuth config
+# ⚠ Change if deployed: https://yourapp.com/api/auth/callback
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
+
+
+# Quota & API Behavior
+# Daily quota limit (estimate of YouTube API quota usage allowance)
+YTPM_DAILY_QUOTA=10000
+
+# Logging verbosity: debug | info | warn | error
+LOG_LEVEL=debug
