--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,9 @@ GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
 
 # Quota & API Behavior
 # Daily quota limit (estimate of YouTube API quota usage allowance)
-YTPM_DAILY_QUOTA=10000
+# Expiration date of the additional quota: 2026/05/21
+# After the expiration date, the quota will revert back to 10,000.
+YTPM_DAILY_QUOTA=100000 
 
 # Logging verbosity: debug | info | warn | error
 LOG_LEVEL=debug
